[gd_scene load_steps=19 format=2]

[ext_resource path="res://addons/godot-xr-tools/objects/Viewport_2D_in_3D.gd" type="Script" id=1]
[ext_resource path="res://addons/godot-xr-tools/objects/Viewport_2D_in_3D_body.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Test2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Materials/test_material.tres" type="Material" id=4]
[ext_resource path="res://Assets/DesktopPlayer/camera.gd" type="Script" id=5]
[ext_resource path="res://Assets/DesktopPlayer/Crosshair.png" type="Texture" id=6]
[ext_resource path="res://Assets/DesktopPlayer/Function_pointer_desktop.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/DesktopPlayer/Function_Pickup_Desktop.tscn" type="PackedScene" id=8]

[sub_resource type="QuadMesh" id=11]
resource_local_to_scene = true
size = Vector2( 1.28, 0.72 )

[sub_resource type="ViewportTexture" id=15]

[sub_resource type="SpatialMaterial" id=13]
resource_local_to_scene = true
flags_unshaded = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
params_cull_mode = 2
albedo_texture = SubResource( 15 )

[sub_resource type="BoxShape" id=14]
resource_local_to_scene = true
extents = Vector3( 0.64, 0.36, 0.01 )

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.5, 0.01, 0.5 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 0.25, 0.005, 0.25 )

[sub_resource type="CylinderMesh" id=2]
top_radius = 0.01
bottom_radius = 0.05
height = 1.1
radial_segments = 32

[sub_resource type="CylinderShape" id=9]
height = 1.0
radius = 0.05

[sub_resource type="CubeMesh" id=3]
size = Vector3( 1.28, 0.002, 0.72 )

[sub_resource type="BoxShape" id=10]
extents = Vector3( 0.64, 0.001, 0.36 )

[node name="Spatial" type="Spatial"]

[node name="NetworkOverviewScreen" type="Spatial" parent="."]

[node name="Viewport2Din3D" type="Spatial" parent="NetworkOverviewScreen"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 1.12111, 0.00406689 )
script = ExtResource( 1 )
screen_size = Vector2( 1.28, 0.72 )
viewport_size = Vector2( 1280, 720 )
transparent = false
scene = ExtResource( 3 )
collision_layer = 9

[node name="Screen" type="MeshInstance" parent="NetworkOverviewScreen/Viewport2Din3D"]
mesh = SubResource( 11 )
skeleton = NodePath("")
material/0 = SubResource( 13 )

[node name="StaticBody" type="StaticBody" parent="NetworkOverviewScreen/Viewport2Din3D"]
collision_layer = 9
collision_mask = 0
script = ExtResource( 2 )
screen_size = Vector2( 1.28, 0.72 )
viewport_size = Vector2( 1280, 720 )

[node name="CollisionShape" type="CollisionShape" parent="NetworkOverviewScreen/Viewport2Din3D/StaticBody"]
shape = SubResource( 14 )

[node name="Viewport" type="Viewport" parent="NetworkOverviewScreen/Viewport2Din3D"]
size = Vector2( 1280, 720 )
hdr = false
usage = 0
render_target_v_flip = true
render_target_update_mode = 3

[node name="StaticBody" type="StaticBody" parent="NetworkOverviewScreen"]

[node name="MeshInstance" type="MeshInstance" parent="NetworkOverviewScreen/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.005, 0 )
mesh = SubResource( 1 )
skeleton = NodePath("../..")
material/0 = ExtResource( 4 )

[node name="MeshInstance4" type="CollisionShape" parent="NetworkOverviewScreen/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.005, 0 )
shape = SubResource( 8 )

[node name="MeshInstance2" type="MeshInstance" parent="NetworkOverviewScreen/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.558, 0 )
mesh = SubResource( 2 )
skeleton = NodePath("../..")
material/0 = ExtResource( 4 )

[node name="MeshInstance5" type="CollisionShape" parent="NetworkOverviewScreen/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.508, 0 )
shape = SubResource( 9 )

[node name="MeshInstance3" type="MeshInstance" parent="NetworkOverviewScreen/StaticBody"]
transform = Transform( 0.95, 0, 0, 0, 0.671751, -0.671751, 0, 0.671751, 0.671751, 0, 1.12, 0 )
mesh = SubResource( 3 )
skeleton = NodePath("../MeshInstance2")
material/0 = ExtResource( 4 )

[node name="MeshInstance6" type="CollisionShape" parent="NetworkOverviewScreen/StaticBody"]
transform = Transform( 1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 1.12, 0 )
shape = SubResource( 10 )

[node name="DesktopPlayer" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )

[node name="Camera" type="Camera" parent="DesktopPlayer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0 )
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="DesktopPlayer/Camera"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 6 )

[node name="Function_Pickup" parent="DesktopPlayer/Camera" instance=ExtResource( 8 )]
_hand = NodePath("../Hand")
ranged_distance = 1.0
ranged_angle = 10.0
impulse_factor = 2.0

[node name="Hand" type="Spatial" parent="DesktopPlayer/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.15, -0.05, -0.2 )

[node name="Function_pointer" parent="DesktopPlayer/Camera" instance=ExtResource( 7 )]
show_laser = false

[connection signal="pointer_entered" from="NetworkOverviewScreen/Viewport2Din3D/StaticBody" to="NetworkOverviewScreen/Viewport2Din3D" method="_on_pointer_entered"]
[connection signal="pointer_exited" from="NetworkOverviewScreen/Viewport2Din3D/StaticBody" to="NetworkOverviewScreen/Viewport2Din3D" method="_on_pointer_exited"]
[connection signal="pointer_moved" from="NetworkOverviewScreen/Viewport2Din3D/StaticBody" to="NetworkOverviewScreen/Viewport2Din3D/StaticBody" method="_on_pointer_moved"]
[connection signal="pointer_pressed" from="NetworkOverviewScreen/Viewport2Din3D/StaticBody" to="NetworkOverviewScreen/Viewport2Din3D/StaticBody" method="_on_pointer_pressed"]
[connection signal="pointer_released" from="NetworkOverviewScreen/Viewport2Din3D/StaticBody" to="NetworkOverviewScreen/Viewport2Din3D/StaticBody" method="_on_pointer_released"]
